--- a/index.html
+++ b/index.html
@@ -8,32 +8,61 @@
 </head>
 <body>
   <div class="header">
-    <h1>header logo</h1>
-    <ul></ul>
-    <li>header link one</li>
-    <li>header link two</li>
-    <li>header link three</li>
+    <div class="nav-bar">
+      <h1 class="header-logo">Header Logo</h1>
+      <ul>
+        <li class="header-link-text">header link one</li>
+        <li class="header-link-text">header link two</li>
+        <li class="header-link-text">header link three</li>
+      </ul>
+    </div>
+    <div class="hero">
+      <div class="hero-info">
+        <p class="hero-main-text">This website is awesome</p>
+        <p class="hero-secondary-text">This website has some subtext that goes here under the
+          main title. It's a smaller a font and the color is lower
+          contrast</p>
+          <button>Sign up</button>
+        </div>
+      <img src="images/mountains.jpg" alt="" class="hero-img">
   </div>
-
-  <div class="hero">
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the
-      main title. It's a smaller a font and the color is lower
-      contrast</p>
-    <button>Sign up</button>
-    <img src="https://picsum.photos/seed/picsum/200/300" alt="">
-
-  </div>
-
+</div>
   <div class="info">
-    <h1>Some random information</h1>
-    <div class="card">
-      <img src="https://picsum.photos/id/237/200/300" alt="">
-      <p>this IS some subtext under an illustration or image</p>
+    <p class="info-header">Some random information</p>
+    <div class="cards-container">
+      <div class="card">
+        <img src="https://picsum.photos/id/237/200/300" alt="" class="card-img">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/id/237/200/300" alt="" class="card-img">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/id/237/200/300" alt="" class="card-img">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/id/237/200/300" alt="" class="card-img">
+        <p>this is some subtext under an illustration or image</p>
+      </div>
     </div>
   </div>
+  <div class="quote">
+    <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p class="quote-author">-Thor, God of Thunder</p>
+  </div>
 
-
-
+  <div class="call-to-action-container">
+    <div class="cta-text">
+    <p class="cta-header">Call to action! It's time</p>
+    <p>Sign up for our project by clicking that button right over there!</p>
+    </div>
+    <button class="cta-button">Sign up</button>
+  </div>
+  </div>
+  <div class="footer">
+    <p>Copyright © The Odin Project 2021</p>
+  </div>
 </body>
 </html>
