Added new hero photo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="nav-bar">
       <h1 class="header-logo">Header Logo</h1>
       <ul>
-        <li class="header-link-text">header link one</li>
-        <li class="header-link-text">header link two</li>
-        <li class="header-link-text">header link three</li>
+        <li class="header-link-text">About</li>
+        <li class="header-link-text">Portolio</li>
+        <li class="header-link-text">Contact</li>
       </ul>
     </div>
     <div class="hero">
@@ -24,7 +24,7 @@
           contrast</p>
           <button>Sign up</button>
         </div>
-      <img src="images/mountains.jpg" alt="" class="hero-img">
+      <img src="images/mikee-hero-photo.jpg" alt="" class="hero-img">
   </div>
 </div>
   <div class="info">
